Issue #206: create settings from Analyzer entity
- create new endpoints